--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "chzzk Video Controller",
   "description": "k : 재생/일시정지\nm : 음소거\nt : 테두리 없음 / 테두리 있음\nf : 전체화면",
-  "version": "1.3",
+  "version": "1.4",
   "icons": {
     "128": "favicon.png"
   },
@@ -10,6 +10,9 @@
     {
       "matches": [
         "https://chzzk.naver.com/*"
+      ],
+      "css": [
+        "videoControl.css"
       ],
       "js": [
         "videoControl.js"
